tests/snapshots/compiler_tests__literal_coercion.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

<func0>  func @negative_scalar() {
bb0:
    %c = alloca i32 , align 4
    %0 = sub 0, 1
    store %0, ptr %c, align 4, ty i32
    %1 = load i32, ptr %c, align 4
    ret %1
}

<func1>  func @narrow_scalar() {
bb1:
    %b = alloca i8 , align 1
    store 2, ptr %b, align 1, ty i8
    %2 = load i8, ptr %b, align 1
    ret %2
}

<func2>  func @arrays() {
bb2:
    %xs = alloca [3 x i32] , align 4
    %3 = gep i32, ptr %xs, indices [0]
    store 1, ptr %3, align 4, ty i32
    %4 = gep i32, ptr %xs, indices [1]
    store 2, ptr %4, align 4, ty i32
    %5 = gep i32, ptr %xs, indices [2]
    store 3, ptr %5, align 4, ty i32
    %6 = gep i32, ptr %xs, indices [0]
    %7 = load i32, ptr %6, align 4
    ret %7
}

<func3>  func @nested_arrays() {
bb3:
    %grid = alloca [2 x [2 x i32]] , align 4
    %8 = gep [2 x i32], ptr %grid, indices [0]
    %9 = gep i32, ptr %8, indices [0]
    store 1, ptr %9, align 4, ty i32
    %10 = gep i32, ptr %8, indices [1]
    store 2, ptr %10, align 4, ty i32
    %11 = gep [2 x i32], ptr %grid, indices [1]
    %12 = gep i32, ptr %11, indices [0]
    store 3, ptr %12, align 4, ty i32
    %13 = gep i32, ptr %11, indices [1]
    store 4, ptr %13, align 4, ty i32
    %14 = gep [2 x i32], ptr %grid, indices [1]
    %15 = gep i32, ptr %14, indices [0]
    %16 = load i32, ptr %15, align 4
    ret %16
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (1):
--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 0)
--------------------------------------------------
  [0000] return

==================================================
