tests/snapshots/compiler_tests__logic.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

<func0>  func @foo() {
bb0:
    %x = alloca bool , align 1
    %3 = $$eval @$$scope_0
    store %3, ptr %x, align 1, ty bool
    ret 0
}

<func1>  $$func @$$scope_0() {
bb1:
    %a = alloca isize $$, align 8
    store 3, ptr %a, align 8, ty isize
    %b = alloca isize $$, align 8
    store 10, ptr %b, align 8, ty isize
    %0 = load isize, ptr %a, align 8
    %1 = load isize, ptr %b, align 8
    %2 = cmp slt %0, %1
    ret %2
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (2):
--------------------------------------------------
func @$$scope_0 (mode: Full, params: 0, registers: 7)
--------------------------------------------------
  [0000] r0 = alloca size: 8, align: 8
  [0001] r1 = 3 (isize) 
  [0002] store [r0], r1 (isize) (mode: Full)
  [0003] r2 = alloca size: 8, align: 8
  [0004] r3 = 10 (isize) 
  [0005] store [r2], r3 (isize) (mode: Full)
  [0006] load r4, [r0] (isize) (mode: Full)
  [0007] load r5, [r2] (isize) (mode: Full)
  [0008] r6 = r4 slt r5
  [0009] return r6

--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 1)
--------------------------------------------------
  [0000] r0 = $$eval @$$scope_0()
  [0001] return

==================================================
