tests/snapshots/compiler_tests__methods_reachable.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

%Counter = type { n: i32 }

<func0>  $func @Counter_get( %Counter %self) {
bb0:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %0 = gep %Counter, ptr %self.addr, indices [0, 0]
    %1 = load i32, ptr %0, align 4
    ret %1
}

<func1>  $func @Counter_scaled( %Counter %self,  i32 %k) {
bb1:
    %self.addr = alloca %Counter , align 4
    store %self, ptr %self.addr, align 4, ty %Counter
    %k.addr = alloca i32 , align 4
    store %k, ptr %k.addr, align 4, ty i32
    %2 = gep %Counter, ptr %self.addr, indices [0, 0]
    %3 = load i32, ptr %2, align 4
    %4 = load i32, ptr %k.addr, align 4
    %5 = mul %3, %4
    ret %5
}

<func2>  $func @compute() {
bb2:
    %c = alloca %Counter , align 4
    %6 = gep %Counter, ptr %c, indices [0, 0]
    store 3, ptr %6, align 4, ty i32
    %7 = load %Counter, ptr %c, align 4
    %8 = call @func0(%7)
    %9 = load %Counter, ptr %c, align 4
    %10 = call @func1(%9, 4)
    %11 = add %8, %10
    ret %11
}

<func3>  expose func @run() {
bb3:
    %12 = call @func2()
    ret %12
}

<func4>  $func @foo() {
bb4:
    %a = alloca i32 , align 4
    %14 = $$eval @$$scope_0
    store %14, ptr %a, align 4, ty i32
    ret 0
}

<func5>  $$func @$$scope_0() {
bb5:
    %13 = call @func2()
    ret %13
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (6):
--------------------------------------------------
func @Counter_get (mode: Read, params: 1, registers: 6)
--------------------------------------------------
  [0000] r1 = alloca size: 4, align: 4
  [0001] store [r1], r0 (%Counter) (mode: Read)
  [0002] r3 = 0 (usize)
  [0003] r4 = 0 (usize)
  [0004] r2 = gep r1, [r3, r4] (%Counter)
  [0005] load r5, [r2] (i32) (mode: Read)
  [0006] return r5

--------------------------------------------------
func @Counter_scaled (mode: Read, params: 2, registers: 10)
--------------------------------------------------
  [0000] r2 = alloca size: 4, align: 4
  [0001] store [r2], r0 (%Counter) (mode: Read)
  [0002] r3 = alloca size: 4, align: 4
  [0003] store [r3], r1 (i32) (mode: Read)
  [0004] r5 = 0 (usize)
  [0005] r6 = 0 (usize)
  [0006] r4 = gep r2, [r5, r6] (%Counter)
  [0007] load r7, [r4] (i32) (mode: Read)
  [0008] load r8, [r3] (i32) (mode: Read)
  [0009] r9 = r7 * r8
  [0010] return r9

--------------------------------------------------
func @compute (mode: Read, params: 0, registers: 11)
--------------------------------------------------
  [0000] r0 = alloca size: 4, align: 4
  [0001] r2 = 0 (usize)
  [0002] r3 = 0 (usize)
  [0003] r1 = gep r0, [r2, r3] (%Counter)
  [0004] r4 = 3 (i32)
  [0005] store [r1], r4 (i32) (mode: Read)
  [0006] load r5, [r0] (%Counter) (mode: Read)
  [0007] r6 = call @Counter_get(r5)
  [0008] load r7, [r0] (%Counter) (mode: Read)
  [0009] r9 = 4 (i32)
  [0010] r8 = call @Counter_scaled(r7, r9)
  [0011] r10 = r6 + r8
  [0012] return r10

--------------------------------------------------
func @foo (mode: Read, params: 0, registers: 3)
--------------------------------------------------
  [0000] r0 = alloca size: 4, align: 4
  [0001] r1 = $$eval @$$scope_0()
  [0002] store [r0], r1 (i32) (mode: Read)
  [0003] r2 = 0 (u32)
  [0004] return r2

--------------------------------------------------
func @$$scope_0 (mode: Full, params: 0, registers: 1)
--------------------------------------------------
  [0000] r0 = call @compute()
  [0001] return r0

--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 1)
--------------------------------------------------
  [0000] r0 = $$eval @$$scope_0()
  [0001] return

==================================================
